--- a/main.html
+++ b/main.html
@@ -396,18 +396,21 @@
 			text-align: center
 		}
 
-		.bee-row-2 .bee-col-3 .bee-block-1 li a {
-			color: #1b1b1b
-		}
-
-		.bee-row-7 .bee-col-1 .bee-block-1 {
+		.bee-row-11 .bee-col-2 .bee-block-2,
+		.bee-row-15 .bee-col-1 .bee-block-3,
+		.bee-row-15 .bee-col-2 .bee-block-3,
+		.bee-row-15 .bee-col-3 .bee-block-3,
+		.bee-row-4 .bee-col-2 .bee-block-2,
+		.bee-row-8 .bee-col-1 .bee-block-3,
+		.bee-row-8 .bee-col-2 .bee-block-3,
+		.bee-row-8 .bee-col-3 .bee-block-3 {
 			color: #3c3c3c;
 			direction: ltr;
 			font-size: 16px;
 			font-weight: 400;
 			letter-spacing: 0;
 			line-height: 120%;
-			text-align: center
+			text-align: left
 		}
 
 		.bee-row-11 .bee-col-2 .bee-block-2 a,
@@ -454,21 +457,18 @@
 			margin-bottom: 16px
 		}
 
-		.bee-row-11 .bee-col-2 .bee-block-2,
-		.bee-row-15 .bee-col-1 .bee-block-3,
-		.bee-row-15 .bee-col-2 .bee-block-3,
-		.bee-row-15 .bee-col-3 .bee-block-3,
-		.bee-row-4 .bee-col-2 .bee-block-2,
-		.bee-row-8 .bee-col-1 .bee-block-3,
-		.bee-row-8 .bee-col-2 .bee-block-3,
-		.bee-row-8 .bee-col-3 .bee-block-3 {
+		.bee-row-7 .bee-col-1 .bee-block-1 {
 			color: #3c3c3c;
 			direction: ltr;
 			font-size: 16px;
 			font-weight: 400;
 			letter-spacing: 0;
 			line-height: 120%;
-			text-align: left
+			text-align: center
+		}
+
+		.bee-row-2 .bee-col-3 .bee-block-1 li a {
+			color: #1b1b1b
 		}
 
 		.bee-row-14 .bee-col-1 .bee-block-1,
@@ -499,6 +499,17 @@
 			text-align: left
 		}
 
+		.bee-row-17 .bee-col-1 .bee-block-2 {
+			color: #393d47;
+			direction: ltr;
+			font-family: "Roboto Slab", Arial, "Helvetica Neue", Helvetica, sans-serif;
+			font-size: 10px;
+			font-weight: 700;
+			letter-spacing: 0;
+			line-height: 120%;
+			text-align: center
+		}
+
 		.bee-row-19 .bee-col-1 .bee-block-1 .bee-icon-image {
 			padding: 5px 6px 5px 5px
 		}
@@ -509,17 +520,6 @@
 
 		.bee-row-19 .bee-col-1 .bee-block-1 .bee-icon::not(.bee-icon-last) .bee-content {
 			margin-right: 0
-		}
-
-		.bee-row-17 .bee-col-1 .bee-block-2 {
-			color: #393d47;
-			direction: ltr;
-			font-family: "Roboto Slab", Arial, "Helvetica Neue", Helvetica, sans-serif;
-			font-size: 10px;
-			font-weight: 700;
-			letter-spacing: 0;
-			line-height: 120%;
-			text-align: center
 		}
 
 		@media (max-width:768px) {
@@ -583,6 +583,12 @@
 				text-align: center !important
 			}
 
+			.bee-row-11 .bee-col-2 .bee-block-1 h1,
+			.bee-row-4 .bee-col-2 .bee-block-1 h1 {
+				font-size: 35px !important;
+				text-align: center !important
+			}
+
 			.bee-row-2 .bee-col-3 .bee-block-1 .bee-hamburger-controls {
 				width: 36px;
 				height: 36px;
@@ -626,12 +632,6 @@
 				padding: 20px !important
 			}
 
-			.bee-row-11 .bee-col-2 .bee-block-1 h1,
-			.bee-row-4 .bee-col-2 .bee-block-1 h1 {
-				font-size: 35px !important;
-				text-align: center !important
-			}
-
 			.bee-row-14 .bee-col-1 .bee-block-1,
 			.bee-row-7 .bee-col-1 .bee-block-2 {
 				font-size: 35px !important
@@ -661,7 +661,7 @@
 <div class="bee-row bee-row-2">
 <div class="bee-row-content">
 <div class="bee-col bee-col-1 bee-col-w3">
-<div class="bee-block bee-block-1 bee-image"><img alt="Your Logo Light" class="bee-center bee-fixedwidth" src="qlik_s_2.png" style="max-width:89px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="Your Logo Light" class="bee-center bee-fixedwidth" src="images/qlik_s_2.png" style="max-width:89px;"/></div>
 </div>
 <div class="bee-col bee-col-2 bee-col-w4">
 <div class="bee-block bee-block-1 bee-divider">
@@ -708,7 +708,7 @@
 <div class="bee-block bee-block-3 bee-button"><a class="bee-button-content" href="https://bi.pgk.ru/self/hub/stream/51d50c98-ab9e-4506-9ea6-184453e7e805" style="font-size: 14px; background-color: #c2415d; border-bottom: 0px solid transparent; border-left: 0px solid transparent; border-radius: 20px; border-right: 0px solid transparent; border-top: 0px solid transparent; color: #ffffff; direction: ltr; font-family: inherit; font-weight: 400; letter-spacing: 1px; max-width: 100%; padding-bottom: 5px; padding-left: 40px; padding-right: 40px; padding-top: 5px; width: auto; display: inline-block;"><span dir="ltr" style="word-break: break-word; font-size: 14px; line-height: 200%; letter-spacing: 1px;">ВСЕ ПРИЛОЖЕНИЯ</span></a></div>
 </div>
 <div class="bee-col bee-col-3 bee-col-w6">
-<div class="bee-block bee-block-1 bee-image"><img alt="Hero Image" class="bee-center bee-autowidth" src="9898.png" style="max-width:442px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="Hero Image" class="bee-center bee-autowidth" src="images/9898.png" style="max-width:442px;"/></div>
 </div>
 </div>
 </div>
@@ -745,7 +745,7 @@
 <div class="bee-row bee-row-8">
 <div class="bee-row-content">
 <div class="bee-col bee-col-1 bee-col-w4">
-<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="55.jpg" style="max-width:301px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/55.jpg" style="max-width:301px;"/></div>
 <div class="bee-block bee-block-2 bee-paragraph">
 <p>Анализ выполнения плана продаж</p>
 </div>
@@ -755,7 +755,7 @@
 <div class="bee-block bee-block-4 bee-button"><a class="bee-button-content" href="https://bi.pgk.ru/self/sense/app/1d364626-54eb-4f2a-a3cc-11aad4a4e287/sheet/b6b3c472-5398-4609-8fd1-0e78e455e6a8/state/analysis" style="font-size: 14px; background-color: #c2415d; border-bottom: 0px solid transparent; border-left: 0px solid transparent; border-radius: 20px; border-right: 0px solid transparent; border-top: 0px solid transparent; color: #ffffff; direction: ltr; font-family: inherit; font-weight: 400; letter-spacing: 1px; max-width: 100%; padding-bottom: 5px; padding-left: 20px; padding-right: 20px; padding-top: 5px; width: auto; display: inline-block;"><span dir="ltr" style="word-break: break-word; font-size: 14px; line-height: 200%; letter-spacing: 1px;">Перейти</span></a></div>
 </div>
 <div class="bee-col bee-col-2 bee-col-w4">
-<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="Map.jpg" style="max-width:301px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/Map.jpg" style="max-width:301px;"/></div>
 <div class="bee-block bee-block-2 bee-paragraph">
 <p>Карта выполнения плана продаж</p>
 </div>
@@ -765,7 +765,7 @@
 <div class="bee-block bee-block-4 bee-button"><a class="bee-button-content" href="https://bi.pgk.ru/self/sense/app/a5580272-8880-46d1-9b51-1a21b4b13af3/sheet/5baec3f9-6051-4c9c-a0ab-91b8ef878ceb/state/analysis" style="font-size: 14px; background-color: #c2415d; border-bottom: 0px solid transparent; border-left: 0px solid transparent; border-radius: 20px; border-right: 0px solid transparent; border-top: 0px solid transparent; color: #ffffff; direction: ltr; font-family: inherit; font-weight: 400; letter-spacing: 1px; max-width: 100%; padding-bottom: 5px; padding-left: 20px; padding-right: 20px; padding-top: 5px; width: auto; display: inline-block;"><span dir="ltr" style="word-break: break-word; font-size: 14px; line-height: 200%; letter-spacing: 1px;">Перейти</span></a></div>
 </div>
 <div class="bee-col bee-col-3 bee-col-w4">
-<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="VZ_.jpg" style="max-width:301px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/VZ_.jpg" style="max-width:301px;"/></div>
 <div class="bee-block bee-block-2 bee-paragraph">
 <p>Выполнение плана ВЗ</p>
 </div>
@@ -811,7 +811,7 @@
 <div class="bee-block bee-block-3 bee-button"><a class="bee-button-content" href="https://bi.pgk.ru/self/sense/app/9ac4efd3-e568-4dbd-9335-7e8304328cf3/sheet/342e26aa-c74f-4657-8971-921de27278bc/state/analysis" style="font-size: 14px; background-color: #c2415d; border-bottom: 0px solid transparent; border-left: 0px solid transparent; border-radius: 20px; border-right: 0px solid transparent; border-top: 0px solid transparent; color: #ffffff; direction: ltr; font-family: inherit; font-weight: 400; letter-spacing: 1px; max-width: 100%; padding-bottom: 5px; padding-left: 40px; padding-right: 40px; padding-top: 5px; width: auto; display: inline-block;"><span dir="ltr" style="word-break: break-word; font-size: 14px; line-height: 200%; letter-spacing: 1px;">Перейти</span></a></div>
 </div>
 <div class="bee-col bee-col-3 bee-col-w6">
-<div class="bee-block bee-block-1 bee-image"><img alt="Hero Image" class="bee-center bee-fixedwidth" src="555.png" style="max-width:452px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="Hero Image" class="bee-center bee-fixedwidth" src="images/555.png" style="max-width:452px;"/></div>
 </div>
 </div>
 </div>
@@ -845,7 +845,7 @@
 <div class="bee-row bee-row-15">
 <div class="bee-row-content">
 <div class="bee-col bee-col-1 bee-col-w4">
-<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="06565.jpg" style="max-width:301px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/06565.jpg" style="max-width:301px;"/></div>
 <div class="bee-block bee-block-2 bee-paragraph">
 <p>Доля погрузки</p>
 </div>
@@ -855,7 +855,7 @@
 <div class="bee-block bee-block-4 bee-button"><a class="bee-button-content" href="https://bi.pgk.ru/self/sense/app/5828858d-2ad8-4922-b63a-44cab6dd0db0/sheet/37ec8086-bb88-4421-bdbe-c613102c3959/state/analysis" style="font-size: 14px; background-color: #c2415d; border-bottom: 0px solid transparent; border-left: 0px solid transparent; border-radius: 20px; border-right: 0px solid transparent; border-top: 0px solid transparent; color: #ffffff; direction: ltr; font-family: inherit; font-weight: 400; letter-spacing: 1px; max-width: 100%; padding-bottom: 5px; padding-left: 20px; padding-right: 20px; padding-top: 5px; width: auto; display: inline-block;"><span dir="ltr" style="word-break: break-word; font-size: 14px; line-height: 200%; letter-spacing: 1px;">Перейти</span></a></div>
 </div>
 <div class="bee-col bee-col-2 bee-col-w4">
-<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="065657.jpg" style="max-width:301px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/065657.jpg" style="max-width:301px;"/></div>
 <div class="bee-block bee-block-2 bee-paragraph">
 <p>Сравнение доли с основными операторами</p>
 </div>
@@ -865,7 +865,7 @@
 <div class="bee-block bee-block-4 bee-button"><a class="bee-button-content" href="https://bi.pgk.ru/self/sense/app/c4429818-fd56-4ede-ae52-dcbf1fb2d67f/sheet/bf4e56fc-9a0b-4464-89c1-966adb1077be/state/analysis" style="font-size: 14px; background-color: #c2415d; border-bottom: 0px solid transparent; border-left: 0px solid transparent; border-radius: 20px; border-right: 0px solid transparent; border-top: 0px solid transparent; color: #ffffff; direction: ltr; font-family: inherit; font-weight: 400; letter-spacing: 1px; max-width: 100%; padding-bottom: 5px; padding-left: 20px; padding-right: 20px; padding-top: 5px; width: auto; display: inline-block;"><span dir="ltr" style="word-break: break-word; font-size: 14px; line-height: 200%; letter-spacing: 1px;">Перейти</span></a></div>
 </div>
 <div class="bee-col bee-col-3 bee-col-w4">
-<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="Container.jpg" style="max-width:301px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/Container.jpg" style="max-width:301px;"/></div>
 <div class="bee-block bee-block-2 bee-paragraph">
 <p>Контейнерные перевозки</p>
 </div>
@@ -905,7 +905,7 @@
 <div class="bee-row-content">
 <div class="bee-col bee-col-1 bee-col-w3">
 <div class="bee-block bee-block-1 bee-social">
-<div class="content"><span class="icon" style="padding:0 2.5px 0 2.5px;"><a href="https://telegram.org"><img alt="Telegram" src="telegram2x.png" title="Telegram"/></a></span><span class="icon" style="padding:0 2.5px 0 2.5px;"><a href="https://www.whatsapp.com"><img alt="WhatsApp" src="whatsapp2x.png" title="WhatsApp"/></a></span></div>
+<div class="content"><span class="icon" style="padding:0 2.5px 0 2.5px;"><a href="https://telegram.org"><img alt="Telegram" src="images/telegram2x.png" title="Telegram"/></a></span><span class="icon" style="padding:0 2.5px 0 2.5px;"><a href="https://www.whatsapp.com"><img alt="WhatsApp" src="images/whatsapp2x.png" title="WhatsApp"/></a></span></div>
 </div>
 </div>
 <div class="bee-col bee-col-2 bee-col-w3">
@@ -947,7 +947,7 @@
 <div class="bee-block bee-block-1 bee-icons" id="beepro-locked-footer">
 <div class="bee-icon bee-icon-last">
 <div class="bee-content">
-<div class="bee-icon-image"><a href="https://www.designedwithbee.com/?utm_source=editor&utm_medium=bee_pro&utm_campaign=free_footer_link" target="_blank" title="Designed with BEE"><img alt="Designed with BEE" height="32px" src="bee.png" width="auto"/></a></div>
+<div class="bee-icon-image"><a href="https://www.designedwithbee.com/?utm_source=editor&utm_medium=bee_pro&utm_campaign=free_footer_link" target="_blank" title="Designed with BEE"><img alt="Designed with BEE" height="32px" src="images/bee.png" width="auto"/></a></div>
 <div class="bee-icon-label bee-icon-label-right"><a href="https://www.designedwithbee.com/?utm_source=editor&utm_medium=bee_pro&utm_campaign=free_footer_link" target="_blank" title="Designed with BEE">Designed with BEE</a></div>
 </div>
 </div>
