--- a/main.html
+++ b/main.html
@@ -6,8 +6,8 @@
 <meta content="summary_large_image" name="twitter:card"/>
 <meta content="website" property="og:type"/>
 <meta content="" property="og:description"/>
-<meta content="https://b0qw5cvh02.preview-postedstuff.com/V2-eKKh-9ncs-Pq75-tKvJ/" property="og:url"/>
-<meta content="https://pro-bee-beepro-thumbnail.getbee.io/messages/946803/931281/1860761/8892525_large.jpg" property="og:image"/>
+<meta content="https://b0qw5cvh02.preview-postedstuff.com/V2-eKKh-9ncs-Pq75-QlSA/" property="og:url"/>
+<meta content="https://pro-bee-beepro-thumbnail.getbee.io/messages/946803/931281/1860761/8896805_large.jpg" property="og:image"/>
 <meta content="" property="og:title"/>
 <meta content="" name="description"/>
 <meta charset="utf-8"/>
@@ -396,21 +396,18 @@
 			text-align: center
 		}
 
-		.bee-row-11 .bee-col-2 .bee-block-2,
-		.bee-row-15 .bee-col-1 .bee-block-3,
-		.bee-row-15 .bee-col-2 .bee-block-3,
-		.bee-row-15 .bee-col-3 .bee-block-3,
-		.bee-row-4 .bee-col-2 .bee-block-2,
-		.bee-row-8 .bee-col-1 .bee-block-3,
-		.bee-row-8 .bee-col-2 .bee-block-3,
-		.bee-row-8 .bee-col-3 .bee-block-3 {
+		.bee-row-2 .bee-col-3 .bee-block-1 li a {
+			color: #1b1b1b
+		}
+
+		.bee-row-7 .bee-col-1 .bee-block-1 {
 			color: #3c3c3c;
 			direction: ltr;
 			font-size: 16px;
 			font-weight: 400;
 			letter-spacing: 0;
 			line-height: 120%;
-			text-align: left
+			text-align: center
 		}
 
 		.bee-row-11 .bee-col-2 .bee-block-2 a,
@@ -457,18 +454,21 @@
 			margin-bottom: 16px
 		}
 
-		.bee-row-7 .bee-col-1 .bee-block-1 {
+		.bee-row-11 .bee-col-2 .bee-block-2,
+		.bee-row-15 .bee-col-1 .bee-block-3,
+		.bee-row-15 .bee-col-2 .bee-block-3,
+		.bee-row-15 .bee-col-3 .bee-block-3,
+		.bee-row-4 .bee-col-2 .bee-block-2,
+		.bee-row-8 .bee-col-1 .bee-block-3,
+		.bee-row-8 .bee-col-2 .bee-block-3,
+		.bee-row-8 .bee-col-3 .bee-block-3 {
 			color: #3c3c3c;
 			direction: ltr;
 			font-size: 16px;
 			font-weight: 400;
 			letter-spacing: 0;
 			line-height: 120%;
-			text-align: center
-		}
-
-		.bee-row-2 .bee-col-3 .bee-block-1 li a {
-			color: #1b1b1b
+			text-align: left
 		}
 
 		.bee-row-14 .bee-col-1 .bee-block-1,
@@ -549,46 +549,6 @@
 				display: block
 			}
 
-			.bee-row-11 .bee-col-2 .bee-block-1,
-			.bee-row-11 .bee-col-2 .bee-block-2,
-			.bee-row-11 .bee-col-2 .bee-block-3,
-			.bee-row-11 .bee-col-2 .bee-block-3 .bee-button-content,
-			.bee-row-15 .bee-col-1 .bee-block-2,
-			.bee-row-15 .bee-col-1 .bee-block-3,
-			.bee-row-15 .bee-col-1 .bee-block-4,
-			.bee-row-15 .bee-col-1 .bee-block-4 .bee-button-content,
-			.bee-row-15 .bee-col-2 .bee-block-2,
-			.bee-row-15 .bee-col-2 .bee-block-3,
-			.bee-row-15 .bee-col-2 .bee-block-4,
-			.bee-row-15 .bee-col-2 .bee-block-4 .bee-button-content,
-			.bee-row-15 .bee-col-3 .bee-block-2,
-			.bee-row-15 .bee-col-3 .bee-block-3,
-			.bee-row-15 .bee-col-3 .bee-block-4,
-			.bee-row-15 .bee-col-3 .bee-block-4 .bee-button-content,
-			.bee-row-4 .bee-col-2 .bee-block-1,
-			.bee-row-4 .bee-col-2 .bee-block-3,
-			.bee-row-4 .bee-col-2 .bee-block-3 .bee-button-content,
-			.bee-row-8 .bee-col-1 .bee-block-2,
-			.bee-row-8 .bee-col-1 .bee-block-3,
-			.bee-row-8 .bee-col-1 .bee-block-4,
-			.bee-row-8 .bee-col-1 .bee-block-4 .bee-button-content,
-			.bee-row-8 .bee-col-2 .bee-block-2,
-			.bee-row-8 .bee-col-2 .bee-block-3,
-			.bee-row-8 .bee-col-2 .bee-block-4,
-			.bee-row-8 .bee-col-2 .bee-block-4 .bee-button-content,
-			.bee-row-8 .bee-col-3 .bee-block-2,
-			.bee-row-8 .bee-col-3 .bee-block-3,
-			.bee-row-8 .bee-col-3 .bee-block-4,
-			.bee-row-8 .bee-col-3 .bee-block-4 .bee-button-content {
-				text-align: center !important
-			}
-
-			.bee-row-11 .bee-col-2 .bee-block-1 h1,
-			.bee-row-4 .bee-col-2 .bee-block-1 h1 {
-				font-size: 35px !important;
-				text-align: center !important
-			}
-
 			.bee-row-2 .bee-col-3 .bee-block-1 .bee-hamburger-controls {
 				width: 36px;
 				height: 36px;
@@ -632,17 +592,57 @@
 				padding: 20px !important
 			}
 
+			.bee-row-11 .bee-col-2 .bee-block-1,
+			.bee-row-11 .bee-col-2 .bee-block-2,
+			.bee-row-11 .bee-col-2 .bee-block-3,
+			.bee-row-11 .bee-col-2 .bee-block-3 .bee-button-content,
+			.bee-row-15 .bee-col-1 .bee-block-2,
+			.bee-row-15 .bee-col-1 .bee-block-3,
+			.bee-row-15 .bee-col-1 .bee-block-4,
+			.bee-row-15 .bee-col-1 .bee-block-4 .bee-button-content,
+			.bee-row-15 .bee-col-2 .bee-block-2,
+			.bee-row-15 .bee-col-2 .bee-block-3,
+			.bee-row-15 .bee-col-2 .bee-block-4,
+			.bee-row-15 .bee-col-2 .bee-block-4 .bee-button-content,
+			.bee-row-15 .bee-col-3 .bee-block-2,
+			.bee-row-15 .bee-col-3 .bee-block-3,
+			.bee-row-15 .bee-col-3 .bee-block-4,
+			.bee-row-15 .bee-col-3 .bee-block-4 .bee-button-content,
+			.bee-row-4 .bee-col-2 .bee-block-1,
+			.bee-row-4 .bee-col-2 .bee-block-3,
+			.bee-row-4 .bee-col-2 .bee-block-3 .bee-button-content,
+			.bee-row-8 .bee-col-1 .bee-block-2,
+			.bee-row-8 .bee-col-1 .bee-block-3,
+			.bee-row-8 .bee-col-1 .bee-block-4,
+			.bee-row-8 .bee-col-1 .bee-block-4 .bee-button-content,
+			.bee-row-8 .bee-col-2 .bee-block-2,
+			.bee-row-8 .bee-col-2 .bee-block-3,
+			.bee-row-8 .bee-col-2 .bee-block-4,
+			.bee-row-8 .bee-col-2 .bee-block-4 .bee-button-content,
+			.bee-row-8 .bee-col-3 .bee-block-2,
+			.bee-row-8 .bee-col-3 .bee-block-3,
+			.bee-row-8 .bee-col-3 .bee-block-4,
+			.bee-row-8 .bee-col-3 .bee-block-4 .bee-button-content {
+				text-align: center !important
+			}
+
+			.bee-row-11 .bee-col-2 .bee-block-1 h1,
+			.bee-row-4 .bee-col-2 .bee-block-1 h1 {
+				font-size: 35px !important;
+				text-align: center !important
+			}
+
 			.bee-row-14 .bee-col-1 .bee-block-1,
 			.bee-row-7 .bee-col-1 .bee-block-2 {
 				font-size: 35px !important
 			}
 
-			.bee-row-17 .bee-col-1 .bee-block-3 {
-				font-size: 45px !important
-			}
-
 			.bee-row-17 .bee-col-1 .bee-block-2 {
 				font-size: 60px !important
+			}
+
+			.bee-row-17 .bee-col-1 .bee-block-3 {
+				font-size: 45px !important
 			}
 		}
 	</style>
@@ -745,7 +745,7 @@
 <div class="bee-row bee-row-8">
 <div class="bee-row-content">
 <div class="bee-col bee-col-1 bee-col-w4">
-<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/55.jpg" style="max-width:301px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/01_1.PNG" style="max-width:301px;"/></div>
 <div class="bee-block bee-block-2 bee-paragraph">
 <p>Анализ выполнения плана продаж</p>
 </div>
@@ -765,7 +765,7 @@
 <div class="bee-block bee-block-4 bee-button"><a class="bee-button-content" href="https://bi.pgk.ru/self/sense/app/a5580272-8880-46d1-9b51-1a21b4b13af3/sheet/5baec3f9-6051-4c9c-a0ab-91b8ef878ceb/state/analysis" style="font-size: 14px; background-color: #c2415d; border-bottom: 0px solid transparent; border-left: 0px solid transparent; border-radius: 20px; border-right: 0px solid transparent; border-top: 0px solid transparent; color: #ffffff; direction: ltr; font-family: inherit; font-weight: 400; letter-spacing: 1px; max-width: 100%; padding-bottom: 5px; padding-left: 20px; padding-right: 20px; padding-top: 5px; width: auto; display: inline-block;"><span dir="ltr" style="word-break: break-word; font-size: 14px; line-height: 200%; letter-spacing: 1px;">Перейти</span></a></div>
 </div>
 <div class="bee-col bee-col-3 bee-col-w4">
-<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/VZ_.jpg" style="max-width:301px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/03.PNG" style="max-width:301px;"/></div>
 <div class="bee-block bee-block-2 bee-paragraph">
 <p>Выполнение плана ВЗ</p>
 </div>
@@ -845,7 +845,7 @@
 <div class="bee-row bee-row-15">
 <div class="bee-row-content">
 <div class="bee-col bee-col-1 bee-col-w4">
-<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/06565.jpg" style="max-width:301px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/12.PNG" style="max-width:301px;"/></div>
 <div class="bee-block bee-block-2 bee-paragraph">
 <p>Доля погрузки</p>
 </div>
@@ -855,7 +855,7 @@
 <div class="bee-block bee-block-4 bee-button"><a class="bee-button-content" href="https://bi.pgk.ru/self/sense/app/5828858d-2ad8-4922-b63a-44cab6dd0db0/sheet/37ec8086-bb88-4421-bdbe-c613102c3959/state/analysis" style="font-size: 14px; background-color: #c2415d; border-bottom: 0px solid transparent; border-left: 0px solid transparent; border-radius: 20px; border-right: 0px solid transparent; border-top: 0px solid transparent; color: #ffffff; direction: ltr; font-family: inherit; font-weight: 400; letter-spacing: 1px; max-width: 100%; padding-bottom: 5px; padding-left: 20px; padding-right: 20px; padding-top: 5px; width: auto; display: inline-block;"><span dir="ltr" style="word-break: break-word; font-size: 14px; line-height: 200%; letter-spacing: 1px;">Перейти</span></a></div>
 </div>
 <div class="bee-col bee-col-2 bee-col-w4">
-<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/065657.jpg" style="max-width:301px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/11.PNG" style="max-width:301px;"/></div>
 <div class="bee-block bee-block-2 bee-paragraph">
 <p>Сравнение доли с основными операторами</p>
 </div>
@@ -865,7 +865,7 @@
 <div class="bee-block bee-block-4 bee-button"><a class="bee-button-content" href="https://bi.pgk.ru/self/sense/app/c4429818-fd56-4ede-ae52-dcbf1fb2d67f/sheet/bf4e56fc-9a0b-4464-89c1-966adb1077be/state/analysis" style="font-size: 14px; background-color: #c2415d; border-bottom: 0px solid transparent; border-left: 0px solid transparent; border-radius: 20px; border-right: 0px solid transparent; border-top: 0px solid transparent; color: #ffffff; direction: ltr; font-family: inherit; font-weight: 400; letter-spacing: 1px; max-width: 100%; padding-bottom: 5px; padding-left: 20px; padding-right: 20px; padding-top: 5px; width: auto; display: inline-block;"><span dir="ltr" style="word-break: break-word; font-size: 14px; line-height: 200%; letter-spacing: 1px;">Перейти</span></a></div>
 </div>
 <div class="bee-col bee-col-3 bee-col-w4">
-<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/Container.jpg" style="max-width:301px;"/></div>
+<div class="bee-block bee-block-1 bee-image"><img alt="blog Image" class="bee-center bee-autowidth" src="images/04.PNG" style="max-width:301px;"/></div>
 <div class="bee-block bee-block-2 bee-paragraph">
 <p>Контейнерные перевозки</p>
 </div>
