--- a/main.html
+++ b/main.html
@@ -6,8 +6,8 @@
 <meta content="summary_large_image" name="twitter:card"/>
 <meta content="website" property="og:type"/>
 <meta content="" property="og:description"/>
-<meta content="https://b0qw5cvh02.preview-postedstuff.com/V2-eKKh-9ncs-Pq75-QlSA/" property="og:url"/>
-<meta content="https://pro-bee-beepro-thumbnail.getbee.io/messages/946803/931281/1860761/8896805_large.jpg" property="og:image"/>
+<meta content="https://b0qw5cvh02.preview-postedstuff.com/V2-eKKh-9ncs-Pq75-3zom/" property="og:url"/>
+<meta content="https://pro-bee-beepro-thumbnail.getbee.io/messages/946803/931281/1860761/8897278_large.jpg" property="og:image"/>
 <meta content="" property="og:title"/>
 <meta content="" name="description"/>
 <meta charset="utf-8"/>
@@ -209,6 +209,10 @@
 			text-align: center
 		}
 
+		.bee-row-3 .bee-col-1 .bee-block-1 {
+			padding: 20px 10px 10px
+		}
+
 		.bee-row-11,
 		.bee-row-4 {
 			background-repeat: no-repeat;
@@ -331,21 +335,30 @@
 			text-align: left
 		}
 
+		.bee-row-11 .bee-col-3 .bee-block-1 {
+			padding-top: 30px;
+			width: 100%
+		}
+
 		@media (max-width:1045px) {
 
 			.bee-row-11 .bee-col-2,
 			.bee-row-4 .bee-col-2 {
-				padding: 0 20px 20px !important
+				padding: 0 30px 20px !important
+			}
+
+			.bee-row-15 .bee-col-1,
+			.bee-row-15 .bee-col-2,
+			.bee-row-15 .bee-col-3,
+			.bee-row-8 .bee-col-1,
+			.bee-row-8 .bee-col-2,
+			.bee-row-8 .bee-col-3 {
+				padding: 30px 30px 20px !important
 			}
 
 			.bee-row-11 .bee-col-1 {
 				padding: 0 0 20px !important
 			}
-		}
-
-		.bee-row-11 .bee-col-3 .bee-block-1 {
-			padding-top: 30px;
-			width: 100%
 		}
 
 		.bee-row-17 .bee-col-1 .bee-block-1,
@@ -396,18 +409,21 @@
 			text-align: center
 		}
 
-		.bee-row-2 .bee-col-3 .bee-block-1 li a {
-			color: #1b1b1b
-		}
-
-		.bee-row-7 .bee-col-1 .bee-block-1 {
+		.bee-row-11 .bee-col-2 .bee-block-2,
+		.bee-row-15 .bee-col-1 .bee-block-3,
+		.bee-row-15 .bee-col-2 .bee-block-3,
+		.bee-row-15 .bee-col-3 .bee-block-3,
+		.bee-row-4 .bee-col-2 .bee-block-2,
+		.bee-row-8 .bee-col-1 .bee-block-3,
+		.bee-row-8 .bee-col-2 .bee-block-3,
+		.bee-row-8 .bee-col-3 .bee-block-3 {
 			color: #3c3c3c;
 			direction: ltr;
 			font-size: 16px;
 			font-weight: 400;
 			letter-spacing: 0;
 			line-height: 120%;
-			text-align: center
+			text-align: left
 		}
 
 		.bee-row-11 .bee-col-2 .bee-block-2 a,
@@ -454,21 +470,18 @@
 			margin-bottom: 16px
 		}
 
-		.bee-row-11 .bee-col-2 .bee-block-2,
-		.bee-row-15 .bee-col-1 .bee-block-3,
-		.bee-row-15 .bee-col-2 .bee-block-3,
-		.bee-row-15 .bee-col-3 .bee-block-3,
-		.bee-row-4 .bee-col-2 .bee-block-2,
-		.bee-row-8 .bee-col-1 .bee-block-3,
-		.bee-row-8 .bee-col-2 .bee-block-3,
-		.bee-row-8 .bee-col-3 .bee-block-3 {
+		.bee-row-2 .bee-col-3 .bee-block-1 li a {
+			color: #1b1b1b
+		}
+
+		.bee-row-7 .bee-col-1 .bee-block-1 {
 			color: #3c3c3c;
 			direction: ltr;
 			font-size: 16px;
 			font-weight: 400;
 			letter-spacing: 0;
 			line-height: 120%;
-			text-align: left
+			text-align: center
 		}
 
 		.bee-row-14 .bee-col-1 .bee-block-1,
@@ -549,6 +562,40 @@
 				display: block
 			}
 
+			.bee-row-11 .bee-col-2 .bee-block-3,
+			.bee-row-11 .bee-col-2 .bee-block-3 .bee-button-content,
+			.bee-row-15 .bee-col-1 .bee-block-4 .bee-button-content,
+			.bee-row-15 .bee-col-2 .bee-block-4 .bee-button-content,
+			.bee-row-15 .bee-col-3 .bee-block-4 .bee-button-content,
+			.bee-row-4 .bee-col-2 .bee-block-3,
+			.bee-row-4 .bee-col-2 .bee-block-3 .bee-button-content,
+			.bee-row-8 .bee-col-1 .bee-block-4 .bee-button-content,
+			.bee-row-8 .bee-col-2 .bee-block-4 .bee-button-content,
+			.bee-row-8 .bee-col-3 .bee-block-4 .bee-button-content {
+				text-align: center !important
+			}
+
+			.bee-row-4 .bee-col-2 .bee-block-2 {
+				font-size: 14px !important
+			}
+
+			.bee-row-11 .bee-col-2 .bee-block-1,
+			.bee-row-15 .bee-col-1 .bee-block-4,
+			.bee-row-15 .bee-col-2 .bee-block-4,
+			.bee-row-15 .bee-col-3 .bee-block-4,
+			.bee-row-4 .bee-col-2 .bee-block-1,
+			.bee-row-8 .bee-col-1 .bee-block-4,
+			.bee-row-8 .bee-col-2 .bee-block-4,
+			.bee-row-8 .bee-col-3 .bee-block-4 {
+				text-align: left !important
+			}
+
+			.bee-row-11 .bee-col-2 .bee-block-1 h1,
+			.bee-row-4 .bee-col-2 .bee-block-1 h1 {
+				font-size: 30px !important;
+				text-align: left !important
+			}
+
 			.bee-row-2 .bee-col-3 .bee-block-1 .bee-hamburger-controls {
 				width: 36px;
 				height: 36px;
@@ -592,49 +639,38 @@
 				padding: 20px !important
 			}
 
-			.bee-row-11 .bee-col-2 .bee-block-1,
-			.bee-row-11 .bee-col-2 .bee-block-2,
-			.bee-row-11 .bee-col-2 .bee-block-3,
-			.bee-row-11 .bee-col-2 .bee-block-3 .bee-button-content,
-			.bee-row-15 .bee-col-1 .bee-block-2,
-			.bee-row-15 .bee-col-1 .bee-block-3,
-			.bee-row-15 .bee-col-1 .bee-block-4,
-			.bee-row-15 .bee-col-1 .bee-block-4 .bee-button-content,
-			.bee-row-15 .bee-col-2 .bee-block-2,
-			.bee-row-15 .bee-col-2 .bee-block-3,
-			.bee-row-15 .bee-col-2 .bee-block-4,
-			.bee-row-15 .bee-col-2 .bee-block-4 .bee-button-content,
-			.bee-row-15 .bee-col-3 .bee-block-2,
-			.bee-row-15 .bee-col-3 .bee-block-3,
-			.bee-row-15 .bee-col-3 .bee-block-4,
-			.bee-row-15 .bee-col-3 .bee-block-4 .bee-button-content,
-			.bee-row-4 .bee-col-2 .bee-block-1,
-			.bee-row-4 .bee-col-2 .bee-block-3,
-			.bee-row-4 .bee-col-2 .bee-block-3 .bee-button-content,
-			.bee-row-8 .bee-col-1 .bee-block-2,
-			.bee-row-8 .bee-col-1 .bee-block-3,
-			.bee-row-8 .bee-col-1 .bee-block-4,
-			.bee-row-8 .bee-col-1 .bee-block-4 .bee-button-content,
-			.bee-row-8 .bee-col-2 .bee-block-2,
-			.bee-row-8 .bee-col-2 .bee-block-3,
-			.bee-row-8 .bee-col-2 .bee-block-4,
-			.bee-row-8 .bee-col-2 .bee-block-4 .bee-button-content,
-			.bee-row-8 .bee-col-3 .bee-block-2,
-			.bee-row-8 .bee-col-3 .bee-block-3,
-			.bee-row-8 .bee-col-3 .bee-block-4,
-			.bee-row-8 .bee-col-3 .bee-block-4 .bee-button-content {
-				text-align: center !important
-			}
-
-			.bee-row-11 .bee-col-2 .bee-block-1 h1,
-			.bee-row-4 .bee-col-2 .bee-block-1 h1 {
-				font-size: 35px !important;
-				text-align: center !important
+			.bee-row-7 .bee-col-1 .bee-block-1 {
+				padding: 0 30px 30px !important;
+				text-align: left !important;
+				font-size: 14px !important
 			}
 
 			.bee-row-14 .bee-col-1 .bee-block-1,
 			.bee-row-7 .bee-col-1 .bee-block-2 {
-				font-size: 35px !important
+				padding: 0 30px 30px !important;
+				text-align: left !important;
+				font-size: 30px !important
+			}
+
+			.bee-row-15 .bee-col-1 .bee-block-2,
+			.bee-row-15 .bee-col-2 .bee-block-2,
+			.bee-row-15 .bee-col-3 .bee-block-2,
+			.bee-row-8 .bee-col-1 .bee-block-2,
+			.bee-row-8 .bee-col-2 .bee-block-2,
+			.bee-row-8 .bee-col-3 .bee-block-2 {
+				text-align: left !important;
+				font-size: 18px !important
+			}
+
+			.bee-row-11 .bee-col-2 .bee-block-2,
+			.bee-row-15 .bee-col-1 .bee-block-3,
+			.bee-row-15 .bee-col-2 .bee-block-3,
+			.bee-row-15 .bee-col-3 .bee-block-3,
+			.bee-row-8 .bee-col-1 .bee-block-3,
+			.bee-row-8 .bee-col-2 .bee-block-3,
+			.bee-row-8 .bee-col-3 .bee-block-3 {
+				text-align: left !important;
+				font-size: 14px !important
 			}
 
 			.bee-row-17 .bee-col-1 .bee-block-2 {
@@ -684,7 +720,10 @@
 <div class="bee-row bee-row-3">
 <div class="bee-row-content">
 <div class="bee-col bee-col-1 bee-col-w12">
-<div class="bee-block bee-block-1 bee-spacer bee-mobile_hide">
+<div class="bee-block bee-block-1 bee-divider">
+<div class="center bee-separator" style="border-top:2px solid #cccccc;width:90%;"></div>
+</div>
+<div class="bee-block bee-block-2 bee-spacer bee-mobile_hide">
 <div class="spacer" style="height:30px;"></div>
 </div>
 </div>
@@ -703,7 +742,7 @@
 </div>
 <div class="bee-block bee-block-2 bee-paragraph">
 <p>Добро пожаловать в мир Bi-аналитики. Здесь вы найдете интерактивные Бизнес-приложения, направленные на работу в рамках Performance Management.</p>
-<p>А именно отслеживание изменения основных показателей выполнения Оперативного плана продаж, выявление случаев неэффективного использования вагонного парка Общества, длительно простаивающих вагонов и вагонов в Брошенных поездах. Анализ изменения Доли на сети и простоев НКО в сравнении с основными операторами. </p>
+<p>А именно - отслеживание изменения основных показателей выполнения плана продаж, выявление случаев неэффективного использования вагонного парка, длительно простаивающих вагонов и вагонов в брошенных поездах. А также изменение доли на сети и простоев НКО в сравнении с основными операторами. </p>
 </div>
 <div class="bee-block bee-block-3 bee-button"><a class="bee-button-content" href="https://bi.pgk.ru/self/hub/stream/51d50c98-ab9e-4506-9ea6-184453e7e805" style="font-size: 14px; background-color: #c2415d; border-bottom: 0px solid transparent; border-left: 0px solid transparent; border-radius: 20px; border-right: 0px solid transparent; border-top: 0px solid transparent; color: #ffffff; direction: ltr; font-family: inherit; font-weight: 400; letter-spacing: 1px; max-width: 100%; padding-bottom: 5px; padding-left: 40px; padding-right: 40px; padding-top: 5px; width: auto; display: inline-block;"><span dir="ltr" style="word-break: break-word; font-size: 14px; line-height: 200%; letter-spacing: 1px;">ВСЕ ПРИЛОЖЕНИЯ</span></a></div>
 </div>
@@ -734,7 +773,7 @@
 <div class="bee-row-content">
 <div class="bee-col bee-col-1 bee-col-w12">
 <div class="bee-block bee-block-1 bee-paragraph">
-<p>Приложения в потоке PM Аналитика (Qlik Sense) группированы по категориям:</p>
+<p>Приложения в потоке PM Аналитика (Qlik Sense) сгруппированы по категориям:</p>
 </div>
 <div class="bee-block bee-block-2 bee-paragraph">
 <p>Выполнение плана продаж</p>
@@ -916,7 +955,7 @@
 </div>
 <div class="bee-block bee-block-2 bee-text">
 <div class="bee-text-content" style="line-height: 150%; font-size: 12px; font-family: inherit; color: #fafafa;">
-<p style="line-height: 18px; text-align: center;">Отдел аналитической работы (Департамент АУКЦ), <br style=""/>Блок экономики, ПГК</p>
+<p style="line-height: 18px; text-align: center;">Отдел аналитической работы (Департамент АУКЦ), <br style=""/>Блок экономики</p>
 </div>
 </div>
 </div>
