--- a/main.html
+++ b/main.html
@@ -472,16 +472,6 @@
 			text-align: center
 		}
 
-		.bee-row-11 .bee-col-2 .bee-block-1,
-		.bee-row-19 .bee-col-2 .bee-block-1,
-		.bee-row-23 .bee-col-1 .bee-block-2,
-		.bee-row-23 .bee-col-1 .bee-block-3,
-		.bee-row-9 .bee-col-1 .bee-block-1 {
-			direction: ltr;
-			font-family: "Roboto Slab", Arial, "Helvetica Neue", Helvetica, sans-serif;
-			letter-spacing: 0
-		}
-
 		.bee-row-13 .bee-col-1 .bee-block-3,
 		.bee-row-13 .bee-col-2 .bee-block-3,
 		.bee-row-13 .bee-col-3 .bee-block-3,
@@ -551,6 +541,11 @@
 			margin-bottom: 16px
 		}
 
+		.bee-row-2 .bee-col-3 .bee-block-1 li a,
+		.bee-row-8 .bee-col-1 .bee-block-1 li a {
+			color: #1b1b1b
+		}
+
 		.bee-row-7 .bee-col-1 .bee-block-1,
 		.bee-row-7 .bee-col-2 .bee-block-1,
 		.bee-row-7 .bee-col-3 .bee-block-1,
@@ -566,6 +561,18 @@
 			text-align: center
 		}
 
+		.bee-row-11 .bee-col-2 .bee-block-1,
+		.bee-row-19 .bee-col-2 .bee-block-1,
+		.bee-row-23 .bee-col-1 .bee-block-2,
+		.bee-row-9 .bee-col-1 .bee-block-1 {
+			font-weight: 700;
+			color: #393d47;
+			line-height: 120%;
+			direction: ltr;
+			font-family: "Roboto Slab", Arial, "Helvetica Neue", Helvetica, sans-serif;
+			letter-spacing: 0
+		}
+
 		.bee-row-12 .bee-col-1 .bee-block-1 a,
 		.bee-row-7 .bee-col-1 .bee-block-1 a,
 		.bee-row-7 .bee-col-2 .bee-block-1 a,
@@ -576,13 +583,16 @@
 			color: #3c3c3c
 		}
 
-		.bee-row-8 .bee-col-1 .bee-block-1 li {
-			padding: 10px 20px
+		.bee-row-11 .bee-col-2 .bee-block-1,
+		.bee-row-19 .bee-col-2 .bee-block-1 {
+			font-size: 45px;
+			text-align: center
 		}
 
-		.bee-row-2 .bee-col-3 .bee-block-1 li a,
-		.bee-row-8 .bee-col-1 .bee-block-1 li a {
-			color: #1b1b1b
+		.bee-row-23 .bee-col-1 .bee-block-2,
+		.bee-row-9 .bee-col-1 .bee-block-1 {
+			font-size: 10px;
+			text-align: center
 		}
 
 		.bee-row-12 .bee-col-1 .bee-block-1,
@@ -592,24 +602,6 @@
 			font-size: 16px;
 			font-weight: 400;
 			letter-spacing: 0;
-			line-height: 120%;
-			text-align: center
-		}
-
-		.bee-row-23 .bee-col-1 .bee-block-2,
-		.bee-row-9 .bee-col-1 .bee-block-1 {
-			color: #393d47;
-			font-size: 10px;
-			font-weight: 700;
-			line-height: 120%;
-			text-align: center
-		}
-
-		.bee-row-11 .bee-col-2 .bee-block-1,
-		.bee-row-19 .bee-col-2 .bee-block-1 {
-			color: #393d47;
-			font-size: 45px;
-			font-weight: 700;
 			line-height: 120%;
 			text-align: center
 		}
@@ -629,8 +621,23 @@
 			text-align: left
 		}
 
+		.bee-row-8 .bee-col-1 .bee-block-1 li {
+			padding: 10px 20px
+		}
+
 		.bee-row-20 .bee-col-1 .bee-block-1 a {
 			color: #000
+		}
+
+		.bee-row-23 .bee-col-1 .bee-block-3 {
+			color: #393d47;
+			direction: ltr;
+			font-family: "Roboto Slab", Arial, "Helvetica Neue", Helvetica, sans-serif;
+			font-size: 55px;
+			font-weight: 700;
+			letter-spacing: 0;
+			line-height: 120%;
+			text-align: center
 		}
 
 		.bee-row-25 .bee-col-1 .bee-block-1 .bee-icon-image {
@@ -643,14 +650,6 @@
 
 		.bee-row-25 .bee-col-1 .bee-block-1 .bee-icon::not(.bee-icon-last) .bee-content {
 			margin-right: 0
-		}
-
-		.bee-row-23 .bee-col-1 .bee-block-3 {
-			color: #393d47;
-			font-size: 55px;
-			font-weight: 700;
-			line-height: 120%;
-			text-align: center
 		}
 
 		@media (max-width:768px) {
@@ -684,6 +683,19 @@
 				display: block
 			}
 
+			.bee-row-13 .bee-col-1 .bee-block-4 .bee-button-content,
+			.bee-row-13 .bee-col-2 .bee-block-4 .bee-button-content,
+			.bee-row-13 .bee-col-3 .bee-block-4 .bee-button-content,
+			.bee-row-16 .bee-col-2 .bee-block-3,
+			.bee-row-16 .bee-col-2 .bee-block-3 .bee-button-content,
+			.bee-row-21 .bee-col-1 .bee-block-4 .bee-button-content,
+			.bee-row-21 .bee-col-2 .bee-block-4 .bee-button-content,
+			.bee-row-21 .bee-col-3 .bee-block-4 .bee-button-content,
+			.bee-row-4 .bee-col-2 .bee-block-3,
+			.bee-row-4 .bee-col-2 .bee-block-3 .bee-button-content {
+				text-align: center !important
+			}
+
 			.bee-row-4 .bee-col-2 .bee-block-2 {
 				font-size: 14px !important
 			}
@@ -714,45 +726,10 @@
 				float: right !important
 			}
 
-			.bee-row-13 .bee-col-1 .bee-block-4 .bee-button-content,
-			.bee-row-13 .bee-col-2 .bee-block-4 .bee-button-content,
-			.bee-row-13 .bee-col-3 .bee-block-4 .bee-button-content,
-			.bee-row-16 .bee-col-2 .bee-block-3,
-			.bee-row-16 .bee-col-2 .bee-block-3 .bee-button-content,
-			.bee-row-21 .bee-col-1 .bee-block-4 .bee-button-content,
-			.bee-row-21 .bee-col-2 .bee-block-4 .bee-button-content,
-			.bee-row-21 .bee-col-3 .bee-block-4 .bee-button-content,
-			.bee-row-4 .bee-col-2 .bee-block-3,
-			.bee-row-4 .bee-col-2 .bee-block-3 .bee-button-content {
-				text-align: center !important
-			}
-
-			.bee-row-23 .bee-col-1 .bee-block-2,
-			.bee-row-7 .bee-col-1 .bee-block-1,
-			.bee-row-7 .bee-col-2 .bee-block-1,
-			.bee-row-7 .bee-col-3 .bee-block-1,
-			.bee-row-7 .bee-col-4 .bee-block-1,
-			.bee-row-7 .bee-col-5 .bee-block-1,
-			.bee-row-7 .bee-col-6 .bee-block-1,
-			.bee-row-9 .bee-col-1 .bee-block-1 {
-				font-size: 60px !important
-			}
-
-			.bee-row-13 .bee-col-1 .bee-block-3,
-			.bee-row-13 .bee-col-2 .bee-block-3,
-			.bee-row-13 .bee-col-3 .bee-block-3,
-			.bee-row-16 .bee-col-2 .bee-block-2,
-			.bee-row-21 .bee-col-1 .bee-block-3,
-			.bee-row-21 .bee-col-2 .bee-block-3,
-			.bee-row-21 .bee-col-3 .bee-block-3 {
-				text-align: left !important;
-				font-size: 14px !important
-			}
-
-			.bee-row-8 .bee-col-1 .bee-block-1 .bee-hamburger-controls {
+			.bee-row-2 .bee-col-3 .bee-block-1 .bee-hamburger-controls {
 				width: 36px;
 				height: 36px;
-				background-color: #393d47;
+				background-color: #c2415d;
 				border-radius: 0
 			}
 
@@ -774,8 +751,8 @@
 				transform: translate(-50%, -50%) scaleY(0)
 			}
 
-			.bee-row-8 .bee-col-1 .bee-block-1 ul.with-bee-hamburger {
-				background-color: #393d47
+			.bee-row-2 .bee-col-3 .bee-block-1 ul.with-bee-hamburger {
+				background-color: #c2415d
 			}
 
 			.bee-row-2 .bee-col-3 .bee-block-1 ul.with-bee-hamburger li,
@@ -798,11 +775,15 @@
 				padding: 20px !important
 			}
 
-			.bee-row-12 .bee-col-1 .bee-block-1,
-			.bee-row-20 .bee-col-1 .bee-block-1 {
-				padding: 0 0 10px 30px !important;
-				text-align: left !important;
-				font-size: 14px !important
+			.bee-row-23 .bee-col-1 .bee-block-2,
+			.bee-row-7 .bee-col-1 .bee-block-1,
+			.bee-row-7 .bee-col-2 .bee-block-1,
+			.bee-row-7 .bee-col-3 .bee-block-1,
+			.bee-row-7 .bee-col-4 .bee-block-1,
+			.bee-row-7 .bee-col-5 .bee-block-1,
+			.bee-row-7 .bee-col-6 .bee-block-1,
+			.bee-row-9 .bee-col-1 .bee-block-1 {
+				font-size: 60px !important
 			}
 
 			.bee-row-11 .bee-col-2 .bee-block-1,
@@ -810,6 +791,13 @@
 				padding: 0 30px !important;
 				text-align: left !important;
 				font-size: 30px !important
+			}
+
+			.bee-row-12 .bee-col-1 .bee-block-1,
+			.bee-row-20 .bee-col-1 .bee-block-1 {
+				padding: 0 0 10px 30px !important;
+				text-align: left !important;
+				font-size: 14px !important
 			}
 
 			.bee-row-13 .bee-col-1 .bee-block-2,
@@ -822,15 +810,26 @@
 				font-size: 18px !important
 			}
 
-			.bee-row-2 .bee-col-3 .bee-block-1 .bee-hamburger-controls {
+			.bee-row-8 .bee-col-1 .bee-block-1 .bee-hamburger-controls {
 				width: 36px;
 				height: 36px;
-				background-color: #c2415d;
+				background-color: #393d47;
 				border-radius: 0
 			}
 
-			.bee-row-2 .bee-col-3 .bee-block-1 ul.with-bee-hamburger {
-				background-color: #c2415d
+			.bee-row-8 .bee-col-1 .bee-block-1 ul.with-bee-hamburger {
+				background-color: #393d47
+			}
+
+			.bee-row-13 .bee-col-1 .bee-block-3,
+			.bee-row-13 .bee-col-2 .bee-block-3,
+			.bee-row-13 .bee-col-3 .bee-block-3,
+			.bee-row-16 .bee-col-2 .bee-block-2,
+			.bee-row-21 .bee-col-1 .bee-block-3,
+			.bee-row-21 .bee-col-2 .bee-block-3,
+			.bee-row-21 .bee-col-3 .bee-block-3 {
+				text-align: left !important;
+				font-size: 14px !important
 			}
 
 			.bee-row-23 .bee-col-1 .bee-block-3 {
