--- a/main.html
+++ b/main.html
@@ -252,7 +252,7 @@
 		}
 
 		.bee-row-4 .bee-row-content {
-			background-image: url('https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/946803_931281/Top_background_3.png');
+			background-image: url('https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/946803_931281/back%2003.png');
 			background-size: cover;
 			border-radius: 0
 		}
@@ -608,10 +608,6 @@
 			color: #3c3c3c
 		}
 
-		.bee-row-8 .bee-col-1 .bee-block-1 li {
-			padding: 10px 20px
-		}
-
 		.bee-row-9 .bee-col-1 .bee-block-1 {
 			color: #393d47;
 			font-size: 10px;
@@ -643,6 +639,10 @@
 			letter-spacing: 0;
 			line-height: 150%;
 			text-align: left
+		}
+
+		.bee-row-8 .bee-col-1 .bee-block-1 li {
+			padding: 10px 20px
 		}
 
 		.bee-row-21 .bee-col-1 .bee-block-1 a {
@@ -788,17 +788,6 @@
 				font-size: 60px !important
 			}
 
-			.bee-row-8 .bee-col-1 .bee-block-1 .bee-hamburger-controls {
-				width: 36px;
-				height: 36px;
-				background-color: #3c3c3c;
-				border-radius: 0
-			}
-
-			.bee-row-8 .bee-col-1 .bee-block-1 ul.with-bee-hamburger {
-				background-color: #3c3c3c
-			}
-
 			.bee-row-11 .bee-col-2 .bee-block-1,
 			.bee-row-20 .bee-col-2 .bee-block-1 {
 				padding: 0 30px !important;
@@ -838,6 +827,17 @@
 				padding: 0 0 10px 30px !important;
 				text-align: left !important;
 				font-size: 12px !important
+			}
+
+			.bee-row-8 .bee-col-1 .bee-block-1 .bee-hamburger-controls {
+				width: 36px;
+				height: 36px;
+				background-color: #3c3c3c;
+				border-radius: 0
+			}
+
+			.bee-row-8 .bee-col-1 .bee-block-1 ul.with-bee-hamburger {
+				background-color: #3c3c3c
 			}
 		}
 
